--- a/index.html
+++ b/index.html
@@ -402,121 +402,12 @@
                         </div>
                         <div class="card-body">
                             <div class="atualidade-info mb-3">
-                                <span class="badge bg-primary mb-2">Matéria: Inglês</span>
-                                <h6>Responsáveis: ALAN</h6>
+                                <span class="badge bg-primary mb-2">Matéria: !</span>
+                                <h6>Responsáveis: !</h6>
                             </div>
                             <div class="atualidade-content">
-                                <h4>A era da inteligência artificial</h4>
-                                <p>Fazer predições com base em um grande volume de dados. Diagnosticar doenças a partir de
-informações genéticas, históricos médicos e exames. Encontrar o suspeito de um crime com
-reconhecimento facial. Raciocinar dentro de um cenário de incertezas. Realizar análises
-financeiras e avaliar os riscos de uma empresa a partir de consultas de megadados. Todas essas
-tarefas, antes feitas por nós, humanos, já podem ser executadas com inteligência artificial, a IA.
-Mas, afinal, como definir essa tecnologia que está mudando nosso mundo e promete transformar
-mais ainda nossa sociedade?<br>
-                                    <img src="att1.jpg" alt="IA" class="imgnot"><br>
-São várias as definições da IA. Uma delas a descreve como a atividade dedicada a tornar as
-máquinas inteligentes, e inteligência é a qualidade que permite que uma entidade funcione
-adequadamente e com previsão em seu ambiente. Ainda que não tenhamos uma definição exata,
-podemos dizer que IA envolve tecnologias computacionais que atuam inspiradas – ainda que ajam
-de forma diferente – na maneira humana ou de outros seres biológicos de sentir, aprender,
-raciocinar e tomar decisões. Uma descrição mais simples seria: é uma área multidisciplinar cujo
-objetivo é automatizar atividades que requerem inteligência humana.<br><br>
-<strong>Prima-irmã da computação</strong><br>
-Há pouco tempo a IA era vista como ficção científica, sua história se confunde com a da própria
-computação. O britânico Alan Turing (1912-1954), conhecido como pai da computação, foi um dos
-pioneiros na área. O desenvolvimento da IA começou na década de 1950. Em 1956, um grupo de
-pesquisadores, entre eles os americanos Nathan Rochester (1919-2001), da IBM, Claude
-Shannon (1916-2001), o pai da Teoria da Informação, e John McCarthy (1927-2011), se reuniu
-em uma conferência no campus da Dartmouth College, nos Estados Unidos. Neste encontro,
-McCarthy alcunhou o termo inteligência artificial, definindo-o como “a ciência e a engenharia de
-produzir máquinas inteligentes”.<br>
-                                    A partir deste evento, as primeiras pesquisas e resultados usando IA começaram a surgir. Em
-1959, aparece pela primeira vez o termo machine learning para se descrever um sistema que
-permitia aos computadores aprender alguma função sem serem programados diretamente para
-isso. De uma forma simples, a máquina após o aprendizado – que seria fornecer dados de entrada
-para um algoritmo – seria capaz de executar a tarefa de forma automática.<br>
-Décadas depois, no entanto, observou-se que os avanços não estavam acontecendo na
-velocidade que se imaginava. Os pesquisadores pioneiros de IA acreditavam que em, no máximo
-uma geração, as máquinas teriam a mesma capacidade intelectual que os humanos, o que não
-se realizou. Essa frustração trouxe períodos de baixo investimento na área, que logo eram
-retomados, muitas vezes impulsionados pelas evoluções tecnológicas nos computadores.<br><br>
-<strong>A vitória da máquina</strong><br>
-Nos anos 1990, com o surgimento da internet comercial, a IA sofreu um novo impulso ao ser usada
-para o desenvolvimento de sistemas de navegação. O protótipo do que seria hoje o Google surgiu
-nessa época como uma ferramenta baseada em programas que analisavam os dados da rede e
-os classificavam em grupos de interesse predeterminados. Nesse período também, foi
-desenvolvida uma máquina para jogar xadrez: o Deep Blue era capaz de analisar todas as
-possibilidades e, assim, prever respostas e o melhor movimento das peças do jogo. Venceu uma
-partida contra o campeão do mundo, o soviético Garry Kasparov. Foi a primeira vez que uma
-máquina derrotou um humano, mas na série de partidas o enxadrista levou a melhor.<br>
-Daí em diante, foram muitos os avanços tecnológicos que provocaram um aumento exponencial
-de aplicações da inteligência artificial. A automação de processos, que são operados por “robôs”
-na indústria; sistemas inteligentes analisam imagens para reconhecer padrões e auxiliar os
-médicos na tomada de decisão de diagnósticos; os assistentes pessoais como a Siri e a Alexa
-que interagem com o usuário de smartphones; os jogos digitais que aprendem o comportamento
-do jogador; os veículos autônomos e muitas outras tecnologias que fazem parte de nosso dia a
-dia.<br><br>
-                                    <strong>Trampolim para a IA</strong><br>
-Mas o que está transformando este início de século 21 na “era de ouro da IA”? É possível elencar
-alguns aspectos:<br>
-1 – Alta conectividade: não somente a sociedade mundial encontra-se mais conectada
-digitalmente, como também as máquinas, por meio de de diferentes sensores.<br>
-2 – Baixo custo computacional: cada vez mais, “chips” eletrônicos com capacidade de
-processamento igual ou maior que os modelos anteriores são lançados e com custos cada vez
-menores.<br>
-3 – Grande quantidade de dados (Big Data): vivemos num mundo em que a quantidade de dados
-como fonte de informação tem aumentado de uma forma exponencial. Processar esses dados e
-extrair conteúdos relevantes tem sido um grande desafio, e a IA tem se mostrado uma ótima
-ferramenta para tal.<br>
-4 – Machine Learning: o aprendizado de máquina se baseia em algoritmos e modelos
-matemáticos para extrair ou reconhecer padrões escondidos em um conjunto de dados. Essa
-capacidade de associar dados novos aos padrões aprendidos permite que essas máquinas, por
-exemplo, possam identificar objetos em imagens ou vídeos.<br><br>
-<strong>Qual a diferença entre IA, machine learning e deep learning?</strong><br>
-Com o avanço da inteligência artificial em nosso dia a dia, surgem também outros dois
-termos: machine learning e deep learning. É comum considerar que os três são sinônimos, mas
-não é bem assim.<br>
-A inteligência artificial é a capacidade de uma máquina agir inspirada no comportamento de
-humanos e outros seres biológicos. A IA é o termo mais amplo, ou seja, toda machine learning é
-IA, mas nem toda IA é machine learning.<br>
-Mas o que é, afinal, machine learning? Esse subconjunto de IA é a capacidade de uma máquina
-de aprender, como diz o nome, a partir de uma grande quantidade de dados imputada. Com toda
-essa informação recebida, são construídos modelos capazes, por exemplo, de fazer predições,
-com erros mínimos em alguns casos. Como exemplo, podemos citar o uso de técnicas de machine
-learning para predição de preços de ações no mercado de bolsa de valores. Esse modelo de
-predição, baseado, por exemplo, em redes neurais, poderia ser capaz de indicar o valor de
-fechamento do próximo dia dos papéis mais importantes negociados em uma bolsa de valores.
-Já o deep learning é um subconjunto do machine learning e também a tecnologia que o torna
-aplicável. Baseado em redes neurais inspiradas na capacidade cognitiva do cérebro humano,
-o deep learning dispensa uma etapa de pré-processamento de dados – que é obrigatória
-no machine learning – e é capaz de interpretar dados recebidos de forma primária. Os sistemas
-ou máquinas baseados em deep learning são capazes de aprender e se aperfeiçoar quanto mais
-são expostas ao uso. Alguns exemplos são reconhecimento facial em tempo real, sistemas de
-busca na internet e chat-bots.<br>
-                                    <strong>Um risco para os humanos?</strong><br><br>
-Diante de tanta evolução, que impactos positivos ou negativos essas mudanças proporcionadas
-pela IA terão na sociedade? Haverá menos empregos, com as máquinas substituindo os
-humanos? Essa análise não é simples e nem definitiva, uma vez que estamos no meio de um
-processo de transformação. Mas é possível apontar alguns sinais do que, provavelmente, ocorrerá
-no futuro. Em primeiro lugar, é preciso ver que a IA é parte de um contexto maior resultante das
-transformações digitais que já impactam as economias mundiais. Dentro desse cenário, mudanças
-são esperadas nas relações de emprego e trabalho. De acordo com um estudo do Ministério da
-Ciência, Tecnologia, Inovações e Comunicações (MCTIC), há uma tendência de se separar as
-atividades com tarefas automatizáveis e de se valorizar as atividades humanas. Com isso, esperase que o trabalhador do futuro seja responsável por gerenciar riscos, estratégias e operações de
-suas atividades. Assim, aquelas ações mais repetitivas e mecanizadas serão, provavelmente,
-assumidas por máquinas inteligentes. Nesse futuro, aponta o estudo, as relações de trabalho
-devem ser mais horizontais, substituindo a linha vertical “patrão-empregado”, e os profissionais
-terão um papel mais autônomo no trabalho e na produção de valor. Outro aspecto importante é o
-uso dessas novas tecnologias para melhorar a qualidade de vida da sociedade. Segundo o estudo
-do MCTIC, as transformações digitais, incluindo a IA, podem ser empregadas para combater a
-fome, aumentando, por exemplo, a produtividade agropecuária, reduzindo as perdas no campo e
-na logística de distribuição. Podem ainda reduzir o impacto das mudanças climáticas, por meio de
-uma rede de sensores inteligentes que, associada às técnicas de IA, faça mitigação ou prevenção
-de desastres naturais.A discussão sobre como será o nosso futuro com a inteligência artificial não
-se esgota nesses tópicos. Há muito mais o que refletir sobre suas implicações positivas e
-negativas. Mas o primeiro passo é conhecer e divulgar a tecnologia à sociedade para que seja
-empregada da forma mais justa possível.
+                                <h4>!</h4>
+                                <p>O texto de atualidades ainda não foi colocado no site do colégio
 
             </p>
                             </div>
