--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                             <div class="atualidade-content">
                                 <h4>Inteligência artificial já pode ter consciência? O que dizem os cientistas</h4>
                                 <p>Avanço dos grandes modelos de linguagem têm levado especialistas em tecnologia a se perguntar se já estamos vivendo na era em que o que antes era ficção científica se tornou a realidade. <br>
-                                    
+                                    <img src="att2.jpg" alt="IhhAla" class="imgnot"><br>
                                     Avanço dos grandes modelos de linguagem têm levado especialistas em tecnologia a se perguntar se já
 estamos vivendo na era em que o que antes era ficção científica se tornou a realidade. — Foto: Freepik <br>
 Entro na cabine com alguma apreensão. A qualquer instante, vou ser exposto a uma luz estroboscópica
